// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rule input-attributes should contain contextual documentation (invalid) 1`] = `
Object {
  "description": "Attribute \`missing\` is not allowed on \`<input type=\\"text\\">\`

\`missing\` can only be used when \`type\` is:",
  "url": "https://html-validate.org/rules/input-attributes.html",
}
`;

exports[`rule input-attributes should contain contextual documentation 1`] = `
Object {
  "description": "Attribute \`alt\` is not allowed on \`<input type=\\"text\\">\`

\`alt\` can only be used when \`type\` is:
- \`image\`",
  "url": "https://html-validate.org/rules/input-attributes.html",
}
`;

exports[`rule input-attributes should contain documentation 1`] = `
Object {
  "description": "This attribute cannot be used with this input type.",
  "url": "https://html-validate.org/rules/input-attributes.html",
}
`;
